--- a/showtimeDuranjo/templates/galeria/album.html
+++ b/showtimeDuranjo/templates/galeria/album.html
@@ -16,7 +16,7 @@
 			<div class="tituloAlbum">{{album.titulo}}</div> 
 		</div>
 	</section>
-<section id="galerialista" class="galeria">
+<section id="galerialista" class="galeriaAlbum">
 	<div class="wrapper">
 		<div class="regresar"><a href="{% url 'galeriagaleria' %}">Regresar</a></div>
 		<div class="redesSociales">
