fix slider index
cuando las imagenes tengan mismo height se pone como slider sino se
tiene que poner como fade

--- a/showtimeDuranjo/templates/homepage/index.html
+++ b/showtimeDuranjo/templates/homepage/index.html
@@ -68,7 +68,7 @@ Show Time - Inicio
 	<script>
 			$(document).ready(function() {
 			  $('.flexslider').flexslider({
-			  	animation: "slide"
+			  	//animation: "slide" si las imagenes son diferente tamaño poner sin slide
 			  });
 			});
 	</script>
