--- a/showtimeDuranjo/static/css/homepage/radio.css
+++ b/showtimeDuranjo/static/css/homepage/radio.css
@@ -14,11 +14,9 @@
 }
 header{
 	background: url(../../img/background.png) repeat 5% 5%;
-
 	display: inline-block;
 	width: 100%;
 	position: relative;
-	overflow: hidden;
 }
 header .wrapper{
 	position: relative;
@@ -31,7 +29,6 @@ header .wrapper{
 	z-index: 10;
 }
 nav{
-	margin-right: 5%;
 	margin-top: 25px;
 	margin-bottom: 10px;
 	text-align: right;
@@ -105,6 +102,7 @@ nav ul li a{
 	color: #FFF;
 	font-size: 1.5em;
 	text-shadow: 1px 1px 1px #000;
+	padding-top: 1em;
 }
 .reproducto{
 	height: 500px;
@@ -117,6 +115,7 @@ nav ul li a{
 	margin-top: 50px;
 	background: url(../../img/notasmusicales.png) no-repeat;
 	background-position: bottom;
+	min-height: 350px;
 }
 .aboutus  .galeria{
 	width: 62%;
