radio showtime fix logo

--- a/showtimeDuranjo/templates/base.html
+++ b/showtimeDuranjo/templates/base.html
@@ -47,7 +47,7 @@
 	<nav class="ph-line-nav nav">
 		<div class="wrapper">
 			<div class="logomenu">
-					<img src="{% static 'img/logoshowtime.png' %}" alt="Logo de Con Buen Pie">
+					<img src="{% static 'img/logoshowtime.png' %}" alt="Logo de Show time tv">
 			</div>
 			<div class="barraNavegacion">
 				<a href="{% url 'homepageindex' %}">Inicio</a>
