--- a/showtimeDuranjo/templates/homepage/contacto.html
+++ b/showtimeDuranjo/templates/homepage/contacto.html
@@ -20,7 +20,7 @@ Show Time - Contacto
 					<div class="opcionInfo">
 						<div class="tituloOpcionInfo">Correo:</div>
 						<div class="infoOpcion">
-							contacto@conbuenpie.com.ve
+							contacto@showtime.com.ve
 						</div>
 					</div>
 					<div class="opcionInfo ">
@@ -42,14 +42,14 @@ Show Time - Contacto
 					<div class="opcionInfo">
 						<div class="tituloOpcionInfo">Twitter:</div>
 						<div class="infoOpcion">
-							<a href="https://twitter.com/conbuenpiemcbo"
-							 class="twitter-follow-button" data-show-count="true" data-lang="en">Seguir a @conbuenpiemcbo</a>
+							<a href="https://twitter.com/showtimemcbo"
+							 class="twitter-follow-button" data-show-count="true" data-lang="en">Seguir a @showtimemcbo</a>
 						</div>
 					</div>
 					<div class="opcionInfo ">
 						<div class="tituloOpcionInfo">Facebook:</div>
 						<div class="infoOpcion">
-							<div class="fb-like" data-href="http://facebook.com/conbuenpiemcbo" 
+							<div class="fb-like" data-href="http://facebook.com/showtimemcbo" 
 							data-width="300" data-layout="button_count" data-show-faces="true" data-send="true"></div>
 						</div>
 					</div>
