--- a/showtimeDuranjo/templates/base.html
+++ b/showtimeDuranjo/templates/base.html
@@ -37,10 +37,10 @@
 <header id="home" class="cabecera">	
 	<div class="wrapper">
 		<div class="redeSociales">
-			<div class="twitterlogo"></div>
-			<div class="facebook"></div>
-			<div class="googleplus"></div>
-			<div class="instagram"></div>
+			<a href="https://twitter.com/showtimemcbo"><div class="twitterlogo"></div></a>
+			<a href="https://facebook.com/showtimemcbo"><div class="facebook"></div></a>
+			<a href="#"><div class="googleplus"></div></a>
+			<a href="#"><div class="instagram"></div></a>
 		</div>
 	</div>
 	{% block navi %}
