--- a/showtimeDuranjo/templates/galeria/galeria.html
+++ b/showtimeDuranjo/templates/galeria/galeria.html
@@ -20,7 +20,7 @@ Galeria de videos y imagenes de ShowTime.
 {% block contenido %}
 	<section class="menuGaleria">
 		<div id="menuFiltro" class="wrapper">
-			Galería
+			<div class="tituloGaleria">Galería</div>
 			<ul>
 				<li class="active"><a href="#" data-filter="all">Todo</a></li>
 				<li><a href="#" data-filter="albums">Albumes</a></li>
@@ -29,14 +29,6 @@ Galeria de videos y imagenes de ShowTime.
 		</div>
 	</section>
 		<section id="galerialista" class="galeria">
-			<!--<div class="busquedabox">
-				<form action="#galerialista" method="POST">	{% csrf_token %}
-					<input class="textbuscar" type="text" name="busqueda">
-					<input class="botonbuscar"type="submit" value="Buscar">
-				</form>
-			</div>
-			NO SE SI VA IR EL BUSCADOR
-		-->
 			<div class="lista">
 				{% regroup lista_galeria by creado_en|date:"F Y" as lista_por_mes %} 
 				{% for mes in lista_por_mes %}
