--- a/showtimeDuranjo/templates/homepage/index.html
+++ b/showtimeDuranjo/templates/homepage/index.html
@@ -58,7 +58,7 @@ Show Time - Inicio
 					Escuchanos de lunes a viernes a las 10 de la mañana.</p>
 			</div>
 			<div class="twitter">
-				<a class="twitter-timeline" href="https://twitter.com/restonjd" data-widget-id="364519296744976384">Tweets por @restonjd</a>
+				<a class="twitter-timeline" href="https://twitter.com/showtimemcbo" data-widget-id="364519296744976384">Tweets por @showtimemcbo</a>
 				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 			</div>
 		</div>
