--- a/showtimeDuranjo/templates/homepage/index.html
+++ b/showtimeDuranjo/templates/homepage/index.html
@@ -53,9 +53,7 @@ Show Time - Inicio
 		<div class="sinopsis">
 			<div class="info">
 				<h2 class="titulo">Sinopsis<div class="estrella estrellapos2"></div></h2>
-				<p>Programa de radio transmitido por Feria 106.9 FM conducido por Yonna Cabrera y Samir Shker, 
-					bajo la producción de Marco Villalobos. Una hora divertida y amena ¡Para personas como tu! 
-					Escuchanos de lunes a viernes a las 10 de la mañana.</p>
+				<p>Programa de televisión de corte magazine, farándula y entretenimiento de 60 min, una vez a la semana. Conducido por Samir Shker y Yonna Cabrera, que te harán una hora amena informándote sobre las vidas de los artistas entrevistados, obras de teatro, moda, cine, espectaculo y mucho más, bajo la producción de Marcos Villalobos.</p>
 			</div>
 			<div class="twitter">
 				<a class="twitter-timeline" href="https://twitter.com/showtimemcbo" data-widget-id="364519296744976384">Tweets por @showtimemcbo</a>
