--- a/showtimeDuranjo/static/css/homepage/index.css
+++ b/showtimeDuranjo/static/css/homepage/index.css
@@ -72,6 +72,8 @@ h1{
 }
 .ultimasNoticias article img{
 	width: 100%;
+	width: 265px;
+	height: 176px;
 }
 .ultimasNoticias .tituloNoticia{
 	border-bottom: 2px solid white;
