widget twitter component showtime

--- a/showtimeDuranjo/templates/homepage/index.html
+++ b/showtimeDuranjo/templates/homepage/index.html
@@ -23,10 +23,8 @@ Show Time - Inicio
 	<div class="sliderPosition">
 		<div class="flexslider">
 			<ul class="slides">
-				<li><img src="{% static 'img/showimg1.jpg' %}" alt="hola que hace"></li>
+				<li><img src="{% static 'img/showimg1.jpg' %}" alt="It's showtime Yona y Samir"></li>
 				<li><img src="{% static 'img/showimg2.jpg' %}" alt="hola que hace"></li>
-				<li><img src="{% static 'img/showimg3.jpg' %}" alt="hola que hace"></li>
-				<li><img src="{% static 'img/showimg4.jpg' %}" alt="hola que hace"></li>
 		 	</ul>
 		</div>		
 	</div>
@@ -56,8 +54,9 @@ Show Time - Inicio
 				<p>Programa de televisión de corte magazine, farándula y entretenimiento de 60 min, una vez a la semana. Conducido por Samir Shker y Yonna Cabrera, que te harán una hora amena informándote sobre las vidas de los artistas entrevistados, obras de teatro, moda, cine, espectaculo y mucho más, bajo la producción de Marcos Villalobos.</p>
 			</div>
 			<div class="twitter">
-				<a class="twitter-timeline" href="https://twitter.com/showtimemcbo" data-widget-id="364519296744976384">Tweets por @showtimemcbo</a>
+				<a class="twitter-timeline" data-dnt="true" href="https://twitter.com/SHOWTIMEMCBO" data-widget-id="375266093985562624">Tweets por @showtimemcbo</a>
 				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
 			</div>
 		</div>
 	</div>
