fixes, video contacto

--- a/showtimeDuranjo/static/css/galeria/video.css
+++ b/showtimeDuranjo/static/css/galeria/video.css
@@ -41,3 +41,8 @@
 	border-width: 10px 15px 10px 0;
 	border-color: transparent #AA4792 transparent transparent;
 }
+.redesSociales {
+	margin-top: 20px;
+	margin-bottom: 20px;
+	margin-left: 25%;
+}
