--- a/showtimeDuranjo/templates/galeria/video.html
+++ b/showtimeDuranjo/templates/galeria/video.html
@@ -13,13 +13,23 @@
 <div class="wrapper">
 	<div class="tituloVideo">{{ video.titulo }}</div>
 	<div class="regresar"><a href="{% url 'galeriagaleria' %}">Regresar</a></div>
+	<div class="redesSociales">
+			<div class="addthis_toolbox addthis_default_style">
+				<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+				<a class="addthis_button_tweet"></a>
+				<a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
+				<a class="addthis_button_linkedin_counter"></a>
+				<a class="addthis_counter addthis_pill_style"></a>
+			</div>
+			<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=undefined"></script>
+	</div>
 	<div class="video">
 		<div class="componente">{{ video.enlace_video|youtube_embed_url|safe }}</div>
 	</div>
 	<div class="datos">
 		<div class="fecha">{{video.modificado_en}}</div>
 		<div class="descripcion">{{video.breve_descripcion}}</div>
-	</div>
+	</div>	
 </div>
 <script>
 	// By Chris Coyier & tweaked by Mathias Bynens
