--- a/showtimeDuranjo/templates/homepage/contacto.html
+++ b/showtimeDuranjo/templates/homepage/contacto.html
@@ -20,14 +20,14 @@ Show Time - Contacto
 					<div class="opcionInfo">
 						<div class="tituloOpcionInfo">Correo:</div>
 						<div class="infoOpcion">
-							contacto@showtime.com.ve
+							contacto@showtimenews.com.ve
 						</div>
 					</div>
 					<div class="opcionInfo ">
 						<div class="tituloOpcionInfo">Google+:</div>
 						<div class="infoOpcion">
 							<!-- Place this tag where you want the badge to render. -->
-							<div class="g-plus" data-width="300" data-href="//plus.google.com/101327765584320539080" data-rel="publisher"></div>
+							<div class="g-plus" data-width="300" data-href="//plus.google.com/101327765584320539080" data-theme="dark" data-rel="publisher"></div>
 							<!-- Place this tag after the last badge tag. -->
 							<script type="text/javascript">
 							  window.___gcfg = {lang: 'es-419'};
