imagenes una debajo de la otra album

--- a/showtimeDuranjo/static/css/galeria/album.css
+++ b/showtimeDuranjo/static/css/galeria/album.css
@@ -7,6 +7,10 @@
 .listaImagenes{
 	text-align: center;
 }
+.listaImagenes img{
+	margin: 0 auto;
+	display: block;
+}
 .regresar a{
 	text-decoration: none;
 	color: #1C697F;
