--- a/showtimeDuranjo/templates/homepage/index.html
+++ b/showtimeDuranjo/templates/homepage/index.html
@@ -24,7 +24,7 @@ Show Time - Inicio
 		<div class="flexslider">
 			<ul class="slides">
 				<li><img src="{% static 'img/showimg1.jpg' %}" alt="It's showtime Yona y Samir"></li>
-				<li><img src="{% static 'img/showimg2.jpg' %}" alt="hola que hace"></li>
+				<li><img src="{% static 'img/showimg2.jpg' %}" alt="edificios"></li>
 		 	</ul>
 		</div>		
 	</div>
