datos de la radio fix

--- a/showtimeDuranjo/static/css/homepage/radio.css
+++ b/showtimeDuranjo/static/css/homepage/radio.css
@@ -88,7 +88,7 @@ nav ul li a{
 
 /* ==  Transmisión == */
 .transmision p{
-	text-align: right;
+	text-align: center;
 	color: #FFF;
 	font-size: 1.5em;
 	text-shadow: 1px 1px 1px #000;
