--- a/showtimeDuranjo/templates/homepage/radio.html
+++ b/showtimeDuranjo/templates/homepage/radio.html
@@ -40,7 +40,7 @@ Show Time - Radio
 <!--  GRAMA -->
 	<section id="transmision" class="transmision">
 		<div class="wrapper">
-			<p>En vivo de Lunes a Viernes de 10:00 AM a 11:00 AM.</p>
+			<p>En vivo de Lunes a Viernes de 05:00 PM a 06:00 PM por Feria 106.9.</p>
 			<div class="reproducto">
 				<iframe width="850" height="500" src="http://www.ustream.tv/embed/4706359?v=3&amp;wmode=direct" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe>
 			</div>
@@ -53,7 +53,7 @@ Show Time - Radio
 				<h2 class="titulo"><div class="mataCosita"></div>Sinopsis</h2>
 				<p>Programa de radio transmitido por Feria 106.9 FM conducido por Yonna Cabrera y Samir Shker, 
 					bajo la producción de Marco Villalobos. Una hora divertida y amena ¡Para personas como tu! 
-					Escuchanos de lunes a viernes a las 10 de la mañana.</p>
+					Escuchanos de lunes a viernes a las 5 de la tarde.</p>
 			</div>
 			<div class="galeria">		
 					<div class="endless_page_template">
