fix instagram and css shadow

--- a/showtimeDuranjo/templates/base.html
+++ b/showtimeDuranjo/templates/base.html
@@ -39,8 +39,8 @@
 		<div class="redeSociales">
 			<a href="https://twitter.com/showtimemcbo"><div class="twitterlogo"></div></a>
 			<a href="https://facebook.com/showtimemcbo"><div class="facebook"></div></a>
-			<a href="#"><div class="googleplus"></div></a>
-			<a href="#"><div class="instagram"></div></a>
+			<a href="https://plus.google.com/101327765584320539080"><div class="googleplus"></div></a>
+			<a href="http://instagram.com/showtimenews"><div class="instagram"></div></a>
 		</div>
 	</div>
 	{% block navi %}
