--- a/showtimeDuranjo/static/css/base.css
+++ b/showtimeDuranjo/static/css/base.css
@@ -45,6 +45,7 @@ h1{
 	width: 10%;
 	color: #FFF;
 	font-size: 1.1em;
+	text-shadow: 2px 1px 1px #000;
 	margin-right: 60px;
 	text-transform: uppercase;
 	text-decoration: none;
@@ -52,7 +53,8 @@ h1{
 	  -moz-transition: .7s;
 	  -o-transition: .7s;
 	  -ms-transition: .7s;
-	  transition: .7s; }
+	  transition: .7s; 
+}
 .barraNavegacion{
 	height: 25px;
 	overflow: hidden;
@@ -156,6 +158,7 @@ footer{
 .listaMenuFooter{
 	padding: 0;
 	text-align: center;
+	text-shadow: 2px 2px 1px #000;
 }
 .listaMenuFooter li{
 	display: inline-block;
