--- a/showtimeDuranjo/templates/homepage/index.html
+++ b/showtimeDuranjo/templates/homepage/index.html
@@ -3,6 +3,7 @@
 {% load staticfiles %}
 {% block head %} 
 <meta name="description" content="Página oficial de Show Time programa de televisión emitido en la emisora por Global TV">
+<meta name="msvalidate.01" content="5C0D61EB459CD0F5B9245FEA8F798DAA" />
 {% endblock%}
 {% block title %}
 Show Time - Inicio
