--- a/showtimeDuranjo/static/css/galeria/album.css
+++ b/showtimeDuranjo/static/css/galeria/album.css
@@ -45,7 +45,13 @@
 	margin-bottom: 20px;
 	margin-left: 25%;
 }
-
+.galeriabox{
+	position: relative;
+	width: 700px;
+	height: 500px;
+	margin-right: auto;
+	margin-left: auto;
+}
 @media screen and (max-width: 1200px){
 	.listaImagenes img{
 		width: auto;
@@ -60,4 +66,13 @@
 	.regresar:after{
 		left: 18px;
 	}
+}
+@media screen and (max-width: 600px){
+.galeriabox{
+	width: 100%;
+}
+.galleria-container, .galleria-images {
+	width: 100% !important;
+}
+
 }
