Banner nuevo, cambio de información

--- a/showtimeDuranjo/templates/base.html
+++ b/showtimeDuranjo/templates/base.html
@@ -74,7 +74,7 @@
 						<li><a href="{% url 'homepagecontacto' %}">Contacto</a>
 					</ul>
 					<div class="sintonizar">
-						Sintonizanos por Global TV Todos los sábados a las 8:00 PM
+						Somos ShowTime News, de Lunes a Viernes a las 12:00 pm en Explosiva 92.3 FM.
 					</div>
 				</div>
 				<div class="footer-izq">
