--- a/showtimeDuranjo/templates/homepage/index.html
+++ b/showtimeDuranjo/templates/homepage/index.html
@@ -35,7 +35,7 @@ Show Time - Inicio
 <section class="ultimasNoticiasSinopsis">
 	<div class="wrapper">
 		<div class="ultimasNoticias">
-			<h2 class="titulo"><div class="estrella estrellapos1"></div>Ultimas Noticias</h2>
+			<h2 class="titulo"><div class="estrella estrellapos1"></div>Últimas Noticias</h2>
 			{% for item in entradas %}
 			<article>
 			<a href="{{ item.get_absolute_url }}">
@@ -54,7 +54,7 @@ Show Time - Inicio
 		<div class="sinopsis">
 			<div class="info">
 				<h2 class="titulo">Sinopsis<div class="estrella estrellapos2"></div></h2>
-				<p>Programa de televisión de corte magazine, farándula y entretenimiento de 60 min, una vez a la semana. Conducido por Samir Shker y Yonna Cabrera, que te harán una hora amena informándote sobre las vidas de los artistas entrevistados, obras de teatro, moda, cine, espectaculo y mucho más, bajo la producción de Marcos Villalobos.</p>
+				<p>Programa de corte magazine, farándula y entretenimiento. Conducido por Samir Shker y Yonna Cabrera, que te harán una hora amena informándote sobre las vidas de los artistas entrevistados, obras de teatro, moda, cine, espectaculo y mucho más, bajo la producción de Giselle Finol.</p>
 			</div>
 			<div class="twitter">
 				<a class="twitter-timeline" data-dnt="true" href="https://twitter.com/SHOWTIMEMCBO" data-widget-id="375266093985562624">Tweets por @showtimemcbo</a>
