--- a/showtimeDuranjo/templates/homepage/radio.html
+++ b/showtimeDuranjo/templates/homepage/radio.html
@@ -40,7 +40,7 @@ Show Time - Radio
 <!--  GRAMA -->
 	<section id="transmision" class="transmision">
 		<div class="wrapper">
-			<p>En vivo de Lunes a Viernes de 05:00 PM a 06:00 PM por Feria 106.9.</p>
+			<p>En vivo de Lunes a Viernes de 12:00 pm a 1:00 pm por Explosiva 92.3 FM.</p>
 			<div class="reproducto">
 				<iframe width="850" height="500" src="http://www.ustream.tv/embed/4706359?v=3&amp;wmode=direct" scrolling="no" frameborder="0" style="border: 0px none transparent;"></iframe>
 			</div>
@@ -51,9 +51,9 @@ Show Time - Radio
 		<div class="wrapper">
 			<div class="info">
 				<h2 class="titulo"><div class="mataCosita"></div>Sinopsis</h2>
-				<p>Programa de radio transmitido por Feria 106.9 FM conducido por Yonna Cabrera y Samir Shker, 
-					bajo la producción de Marco Villalobos. Una hora divertida y amena ¡Para personas como tu! 
-					Escuchanos de lunes a viernes a las 5 de la tarde.</p>
+				<p>Programa de radio transmitido por Explosiva 92.3 FM conducido por Yonna Cabrera y Samir Shker, 
+					bajo la producción de Giselle Finol. Una hora divertida y amena ¡Para personas como tu! 
+					Escuchanos de lunes a viernes a las 12 del medio día.</p>
 			</div>
 			<div class="galeria">		
 					<div class="endless_page_template">
@@ -100,7 +100,7 @@ Show Time - Radio
 {% endblock%}
 {% block footer %}
 <div class="wrapper">
-			<p class="fraseFooter">En vivo de Lunes a Viernes de 10:00 AM a 11:00 AM.</p>
+			<p class="fraseFooter">En vivo de Lunes a Viernes de 12:00 pm a 1:00 pm</p>
 			<div class="footer-der">
 				<div class="logoblanco"></div>
 				Copyright © 2013, Todos los derechos reservados.
